# hax

./: .gitignore  README.md  Setup.hs  hax.cabal  stack.yaml
src/: main.hs  model.hs  model2.hs
src/HAX/: Accounting.hs  Assets.hs  Bookkeeping.hs  Common.hs  Example.hs  Germany.hs  Report.hs  TH.hs
src/HAX/Bookkeeping/: Internal.hs
src/HAX/Germany/: Bookkeeping  Einkommensteuer.hs  Gewerbe.hs  GmbH.hs  NatuerlichePerson.hs  Subjekte.hs
static/: charts-code.js  charts.html  code.js
