name:                hax
version:             0.0.2
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
Bug-Reports:      http://github.com/johannesgerer/hax/issues
License:          MIT
License-file:     LICENSE
Author:           Johannes Gerer
Maintainer:       Johannes Gerer <oss@johannesgerer.com>
Homepage:         http://johannesgerer.com/hax
Stability:        Experimental
category:       Finance
synopsis:      Haskell cash-flow and tax simulation
description:
  This package contains a library that for a double-entry accounting based cash-flow simulation with a detailed translation of the German tax code including personal income tax (Einkommensteuer), corporate tax (Körperschaftsteuer) and trade/business tax (Gewerbesteuer).

   .
   See <https://github.com/johannesgerer/hax Readme> on Github.


Extra-source-files:
                   README.md
                   stack.yaml
                   static/Chart.js
                   static/charts-code.js
                   static/charts.html
                   static/code.js

executable hax
  main-is:             main.hs
  other-modules:       HAX.Accounting
                       HAX.Assets
                       HAX.Bookkeeping
                       HAX.Bookkeeping.Internal
                       HAX.Common
                       HAX.Germany
                       HAX.Germany.NatuerlichePerson
                       HAX.Germany.GmbH
                       HAX.Germany.Einkommensteuer
                       HAX.Germany.Gewerbe
                       HAX.Germany.Subjekte
                       HAX.Example
                       HAX.Report
  Hs-Source-Dirs:   src
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -H1200M 
  build-depends:       Decimal
                     , aeson
                     , array >= 0.5.0.0
                     , base
                     , blaze-html
                     , blaze-markup
                     , boxes
                     , bytestring
                     , containers >= 0.5.5.1
                     , directory
                     , filepath
                     , mtl
                     , split
                     , template-haskell
                     , text
                     , transformers
  default-language:    Haskell2010

library
  exposed-modules:     HAX.Accounting
                       HAX.Assets
                       HAX.Bookkeeping
                       HAX.Bookkeeping.Internal
                       HAX.Common
                       HAX.Germany
                       HAX.Germany.NatuerlichePerson
                       HAX.Germany.GmbH
                       HAX.Germany.Einkommensteuer
                       HAX.Germany.Gewerbe
                       HAX.Germany.Subjekte
                       HAX.Example
                       HAX.Report
  Hs-Source-Dirs:   src
  ghc-options:         -O2
  build-depends:       Decimal
                     , aeson
                     , array >= 0.5.0.0
                     , base
                     , blaze-html
                     , blaze-markup
                     , boxes
                     , bytestring
                     , containers >= 0.5.5.1
                     , directory
                     , filepath
                     , mtl
                     , split
                     , template-haskell
                     , text
                     , transformers
  default-language:    Haskell2010